UIDevTools: Don't highlight empty elements

When an empty element is hovered, do not show a tiny highlighted
square. There is no need to highlight in this case. However, for
invisible non-empty element, we still show its bound for information.

BUG=898998

Change-Id: I8d5569710c427011dac90ec5ef9bc4dbc63eadd4
Reviewed-on: https://chromium-review.googlesource.com/c/1309413
Commit-Queue: Wei Li <weili@chromium.org>
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604945}
Former-commit-id: 7d421c4995a186ae572ba325c667f1e93bb92f43